--- a/package.json
+++ b/package.json
@@ -1,6 +1,30 @@
 {
     "name": "7_mars_jquery_ajax",
     "version": "1.0.0",
+    "eslintConfig": {
+        "env": {
+            "browser": true,
+            "commonjs": true,
+            "es6": true,
+            "node": true
+        },
+        "parserOptions": {
+            "ecmaVersion": 6,
+            "ecmaFeatures": {
+                "jsx": true
+            },
+            "sourceType": "module"
+        },
+        "rules": {
+            "no-const-assign": "warn",
+            "no-this-before-super": "warn",
+            "no-undef": "warn",
+            "no-unreachable": "warn",
+            "no-unused-vars": "warn",
+            "constructor-super": "warn",
+            "valid-typeof": "warn"
+        }
+    },
     "description": "",
     "main": "main.js",
     "scripts": {
