--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "autoprefixer": "^6.7.6",
         "babel-preset-latest": "^6.22.0",
         "browser-sync": "^2.18.8",
+        "eslint-config-es5": "^0.5.0",
         "gulp": "^3.9.1",
         "gulp-babel": "^6.1.2",
         "gulp-postcss": "^6.3.0",
