--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "license": "ISC",
     "devDependencies": {
         "autoprefixer": "^6.7.6",
-        "babel-preset-latest": "^6.22.0",
+        "babel-preset-env": "^1.6.1",
         "browser-sync": "^2.18.8",
         "eslint-config-es5": "^0.5.0",
         "gulp": "^3.9.1",
